Fix styling with the fixed nav bar on the public/team pages
Before, a non-started contest would end up partially hidden under the
header on the public scoreboard page.

--- a/webapp/web/style.css
+++ b/webapp/web/style.css
@@ -2,7 +2,7 @@ body {
 	color: black;
 	background-color: white;
 	font-family: sans-serif;
-	padding-top: 2rem;
+	padding-top: 4.5rem;
 }
 
 img {	border: 0; }
